--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "xml.fileAssociations": [
         {
             "pattern": "**/source/**.ptx",
-            "systemId": "/Users/kgteller/.vscode/extensions/oscarlevin.pretext-tools-0.35.0/assets/schema/pretext.rng"
+            "systemId": "/home/codespace/.vscode-remote/extensions/oscarlevin.pretext-tools-0.35.0/assets/schema/pretext.rng"
         }
     ]
 }
